[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/ui/components/frame/Frame_LevelFrame.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/LilitaOne.tres" type="DynamicFont" id=2]
[ext_resource path="res://prefabs/UI/BaseSignalButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/icons/ChestIconBlue.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/components/frame/Frame_BasicFrame_Square01.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/icons/IconFist.Png" type="Texture" id=6]
[ext_resource path="res://assets/ui/components/frame/Frame_ListFrame01.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/components/frame/Frame_ListFrame02.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/icons/IconPass.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/backgrounds/Background1.png" type="Texture" id=10]
[ext_resource path="res://prefabs/UI/VertSignalButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/ui/components/frame/Frame_ItemFrame01.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/icons/IconInventory.Png" type="Texture" id=13]
[ext_resource path="res://assets/ui/icons/IconClanDisabled.Png" type="Texture" id=14]
[ext_resource path="res://assets/ui/icons/IconLock.png" type="Texture" id=15]
[ext_resource path="res://prefabs/UI/HorSignalButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/ui/components/button/Btn_MainButton_Yellow.Png" type="Texture" id=17]
[ext_resource path="res://assets/ui/icons/IconBattle.png" type="Texture" id=18]
[ext_resource path="res://prefabs/UI/SmallSignalButton.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/ui/icons/IconRewards.Png" type="Texture" id=20]
[ext_resource path="res://assets/ui/icons/IconMission.Png" type="Texture" id=21]
[ext_resource path="res://assets/ui/icons/IconFriends.png" type="Texture" id=22]
[ext_resource path="res://assets/ui/icons/IconHammer.png" type="Texture" id=23]
[ext_resource path="res://assets/ui/components/button/Btn_OtherButton_SideButton01_Left.png" type="Texture" id=24]
[ext_resource path="res://assets/ui/icons/IconSettings.png" type="Texture" id=25]
[ext_resource path="res://scripts/UI/scenes/Lobby.gd" type="Script" id=26]
[ext_resource path="res://assets/sprites/particles/fx_special_particle_blue.png" type="Texture" id=27]
[ext_resource path="res://prefabs/UI/elements/ResourceBar.tscn" type="PackedScene" id=28]
[ext_resource path="res://assets/ui/icons/IconCoin.png" type="Texture" id=29]
[ext_resource path="res://assets/fonts/LilitaOne-Regular.ttf" type="DynamicFontData" id=30]
[ext_resource path="res://assets/ui/icons/IconEnergy.png" type="Texture" id=31]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.0141026, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.50641, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 30 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 26 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="BackgroundCol" type="ColorRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.227451, 1, 1 )

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true

[node name="Particles" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 960, 540 )
amount = 25
lifetime = 2.0
preprocess = 10.0
texture = ExtResource( 27 )
emission_shape = 2
emission_rect_extents = Vector2( 960, 540 )
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 1 )

[node name="TopLeftContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -540.0
margin_right = 484.0
margin_bottom = -52.0
rect_min_size = Vector2( 444, 0 )
custom_constants/separation = 32

[node name="Level" type="Control" parent="TopLeftContainer"]
margin_right = 444.0
margin_bottom = 128.0
rect_min_size = Vector2( 444, 128 )

[node name="ExpBar" type="ProgressBar" parent="TopLeftContainer/Level"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_right = 246.0
margin_bottom = 48.0
max_value = 400.0
value = 183.0
percent_visible = false

[node name="ExpLabel" type="Label" parent="TopLeftContainer/Level/ExpBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -19.0
margin_right = 62.5
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "183/400"

[node name="LevelFrame" type="TextureRect" parent="TopLeftContainer/Level"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -33.675
margin_right = 54.6
margin_bottom = 33.675
rect_scale = Vector2( 1.4, 1.4 )
rect_pivot_offset = Vector2( 33, 35 )
texture = ExtResource( 1 )
expand = true

[node name="LevelLabel" type="Label" parent="TopLeftContainer/Level/LevelFrame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -19.0
margin_right = 22.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "3"
align = 1
valign = 1

[node name="PlayerName" type="Label" parent="TopLeftContainer/Level"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 96.0
margin_top = -35.0
margin_right = 183.0
margin_bottom = 3.0
custom_fonts/font = ExtResource( 2 )
text = "Ryuen"

[node name="Missions" type="Control" parent="TopLeftContainer"]
margin_top = 160.0
margin_right = 444.0
margin_bottom = 308.0
rect_min_size = Vector2( 444, 148 )

[node name="MissionsButton" parent="TopLeftContainer/Missions" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -35.0
margin_right = 151.5
margin_bottom = 79.0
rect_min_size = Vector2( 303, 114 )
play_anim = false

[node name="Texture" parent="TopLeftContainer/Missions/MissionsButton" index="0"]
texture = ExtResource( 5 )
patch_margin_left = 19
patch_margin_top = 15
patch_margin_bottom = 30

[node name="MissionsProgress" type="ProgressBar" parent="TopLeftContainer/Missions"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -37.0
margin_right = 134.0
margin_bottom = -2.0
percent_visible = false

[node name="MissionsIcon" type="TextureRect" parent="TopLeftContainer/Missions"]
modulate = Color( 0.262745, 0.482353, 1, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -103.0
margin_top = -46.0
margin_right = -48.0
margin_bottom = 16.0
texture = ExtResource( 6 )

[node name="ChestIcon" type="TextureRect" parent="TopLeftContainer/Missions"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -74.0
margin_right = 174.0
margin_bottom = 74.0
texture = ExtResource( 4 )
flip_h = true

[node name="MissionsLabel" type="Label" parent="TopLeftContainer/Missions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.5
margin_top = -19.0
margin_right = 106.5
margin_bottom = 19.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "0  /  100"
align = 1

[node name="SeasonPass" type="Control" parent="TopLeftContainer"]
margin_top = 340.0
margin_right = 444.0
margin_bottom = 488.0
rect_min_size = Vector2( 444, 148 )

[node name="SeasonPassButton" parent="TopLeftContainer/SeasonPass" instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
play_anim = false

[node name="Texture" parent="TopLeftContainer/SeasonPass/SeasonPassButton" index="0"]
texture = ExtResource( 7 )
patch_margin_left = 26
patch_margin_top = 27
patch_margin_right = 269
patch_margin_bottom = 40

[node name="SeasonLabel" type="Label" parent="TopLeftContainer/SeasonPass"]
margin_left = 16.0
margin_top = 16.0
margin_right = 149.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.054902, 0.933333, 0.945098, 1 )
custom_fonts/font = ExtResource( 2 )
text = "SEASON 1"

[node name="SeasonProgress" type="Label" parent="TopLeftContainer/SeasonPass"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -53.0
margin_top = 21.0
margin_right = 27.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "0  /  10"

[node name="SeasonProgressBar" type="Control" parent="TopLeftContainer/SeasonPass"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 71.0

[node name="ProgressBar" type="ProgressBar" parent="TopLeftContainer/SeasonPass/SeasonProgressBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.5
margin_top = -15.5
margin_right = 75.5
margin_bottom = 15.5
max_value = 10.0
percent_visible = false

[node name="CurrentLevel" type="TextureRect" parent="TopLeftContainer/SeasonPass/SeasonProgressBar"]
modulate = Color( 1, 1, 0.909804, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 13.0
margin_top = -21.5
margin_right = 53.0
margin_bottom = 27.5
rect_scale = Vector2( 1.25, 1.25 )
rect_pivot_offset = Vector2( 20, 24 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="TopLeftContainer/SeasonPass/SeasonProgressBar/CurrentLevel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -22.2
margin_right = 20.0
margin_bottom = 15.8
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 1
valign = 1

[node name="IconPass" type="TextureRect" parent="TopLeftContainer/SeasonPass/SeasonProgressBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -144.864
margin_top = -99.328
margin_bottom = 19.328
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="TopLeftContainer/SeasonPass/SeasonProgressBar/IconPass"]
modulate = Color( 0.992157, 1, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -83.432
margin_top = -21.656
margin_right = 82.568
margin_bottom = 16.344
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Golden Pass"
align = 1
valign = 1

[node name="BottomLeftContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -232.0
margin_right = 1000.0
margin_bottom = -40.0
custom_constants/separation = 35

[node name="ShopButton" parent="BottomLeftContainer" instance=ExtResource( 11 )]

[node name="InventoryButton" parent="BottomLeftContainer" instance=ExtResource( 11 )]
margin_left = 291.0
margin_right = 547.0

[node name="Texture" parent="BottomLeftContainer/InventoryButton" index="0"]
texture = ExtResource( 12 )

[node name="Icon" parent="BottomLeftContainer/InventoryButton" index="1"]
margin_left = -67.5
margin_top = -29.0
margin_right = 67.5
margin_bottom = 103.0
texture = ExtResource( 13 )

[node name="Label" parent="BottomLeftContainer/InventoryButton" index="2"]
text = "INVENTORY"

[node name="ClanButton" parent="BottomLeftContainer" instance=ExtResource( 11 )]
margin_left = 582.0
margin_right = 838.0
disabled = true

[node name="Texture" parent="BottomLeftContainer/ClanButton" index="0"]
texture = ExtResource( 12 )

[node name="Icon" parent="BottomLeftContainer/ClanButton" index="1"]
margin_left = -67.5
margin_top = -29.0
margin_right = 67.5
margin_bottom = 103.0
texture = ExtResource( 14 )

[node name="Label" parent="BottomLeftContainer/ClanButton" index="2"]
text = "CLAN"

[node name="LockIcon" type="TextureRect" parent="BottomLeftContainer/ClanButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -52.0
texture = ExtResource( 15 )
expand = true

[node name="BottomRightContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1000.0
margin_top = -277.0
margin_right = -40.0
margin_bottom = -40.0
custom_constants/separation = 40
alignment = 2

[node name="StageButton" parent="BottomRightContainer" instance=ExtResource( 16 )]
margin_left = 160.0
margin_right = 540.0
margin_bottom = 237.0
rect_min_size = Vector2( 380, 230 )
to_scene = "res://scenes/UI/StageSelect.tscn"

[node name="BattleButton" parent="BottomRightContainer" instance=ExtResource( 16 )]
margin_left = 580.0
margin_right = 960.0
margin_bottom = 237.0

[node name="Texture" parent="BottomRightContainer/BattleButton" index="0"]
texture = ExtResource( 17 )

[node name="Icon" parent="BottomRightContainer/BattleButton" index="1"]
margin_left = 24.0
margin_top = -67.5
margin_right = 170.0
margin_bottom = 67.5
rect_pivot_offset = Vector2( 73, 67 )
texture = ExtResource( 18 )

[node name="Label" parent="BottomRightContainer/BattleButton" index="2"]
margin_left = -11.0
margin_top = -38.0
margin_right = 155.0
margin_bottom = 22.0
text = "BATTLE"

[node name="CenterRightContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -311.0
margin_top = -279.5
margin_right = -40.0
margin_bottom = 119.5
custom_constants/separation = 15

[node name="Col1" type="HBoxContainer" parent="CenterRightContainer"]
margin_right = 271.0
margin_bottom = 128.0
custom_constants/separation = 15

[node name="RankingButton" parent="CenterRightContainer/Col1" instance=ExtResource( 19 )]

[node name="RewardsButton" parent="CenterRightContainer/Col1" instance=ExtResource( 19 )]
margin_left = 143.0
margin_right = 271.0

[node name="Icon" parent="CenterRightContainer/Col1/RewardsButton" index="1"]
margin_left = -32.55
margin_right = 32.55
margin_bottom = 83.2
texture = ExtResource( 20 )

[node name="Label" parent="CenterRightContainer/Col1/RewardsButton" index="2"]
text = "Rewards"

[node name="Col2" type="HBoxContainer" parent="CenterRightContainer"]
margin_top = 143.0
margin_right = 271.0
margin_bottom = 271.0
custom_constants/separation = 15

[node name="QuestsButton" parent="CenterRightContainer/Col2" instance=ExtResource( 19 )]

[node name="Icon" parent="CenterRightContainer/Col2/QuestsButton" index="1"]
margin_left = -35.7
margin_right = 35.7
margin_bottom = 90.9
texture = ExtResource( 21 )

[node name="Label" parent="CenterRightContainer/Col2/QuestsButton" index="2"]
text = "Quests"

[node name="FriendsButton" parent="CenterRightContainer/Col2" instance=ExtResource( 19 )]
margin_left = 143.0
margin_right = 271.0

[node name="Icon" parent="CenterRightContainer/Col2/FriendsButton" index="1"]
margin_left = -39.9
margin_right = 39.9
margin_bottom = 85.3
texture = ExtResource( 22 )

[node name="Label" parent="CenterRightContainer/Col2/FriendsButton" index="2"]
text = "Friends"

[node name="Col3" type="HBoxContainer" parent="CenterRightContainer"]
margin_top = 286.0
margin_right = 271.0
margin_bottom = 414.0
custom_constants/separation = 15
alignment = 1

[node name="EditorButton" parent="CenterRightContainer/Col3" instance=ExtResource( 19 )]
margin_left = 71.0
margin_right = 199.0

[node name="Icon" parent="CenterRightContainer/Col3/EditorButton" index="1"]
margin_left = -32.9
margin_right = 32.9
margin_bottom = 75.5
texture = ExtResource( 23 )

[node name="Label" parent="CenterRightContainer/Col3/EditorButton" index="2"]
text = "Editor"

[node name="SettingsButton" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_top = 18.0
margin_right = 0.0
margin_bottom = 146.0
rect_min_size = Vector2( 128, 128 )

[node name="Texture" parent="SettingsButton" index="0"]
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 24 )
patch_margin_left = 4
patch_margin_top = 25
patch_margin_right = 39

[node name="Icon" type="TextureRect" parent="SettingsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.5
margin_top = -47.5
margin_right = 45.5
margin_bottom = 31.5
texture = ExtResource( 25 )

[node name="TopRightContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1169.0
margin_top = 42.0
margin_right = -184.0
margin_bottom = 116.0
custom_constants/separation = 35
alignment = 2

[node name="EnergyBar" parent="TopRightContainer" instance=ExtResource( 28 )]
margin_left = 165.0
margin_right = 415.0

[node name="Icon" parent="TopRightContainer/EnergyBar" index="1"]
margin_left = -38.0
margin_top = -41.0
margin_bottom = 34.0
texture = ExtResource( 31 )

[node name="Texture" parent="TopRightContainer/EnergyBar/SignalButton" index="0"]
texture = ExtResource( 17 )

[node name="CoinBar" parent="TopRightContainer" instance=ExtResource( 28 )]
margin_left = 450.0
margin_right = 700.0

[node name="Icon" parent="TopRightContainer/CoinBar" index="1"]
margin_bottom = 33.6
texture = ExtResource( 29 )

[node name="Texture" parent="TopRightContainer/CoinBar/SignalButton" index="0"]
texture = ExtResource( 17 )

[node name="GemBar" parent="TopRightContainer" instance=ExtResource( 28 )]
margin_left = 735.0
margin_right = 985.0

[editable path="TopLeftContainer/Missions/MissionsButton"]
[editable path="TopLeftContainer/SeasonPass/SeasonPassButton"]
[editable path="BottomLeftContainer/InventoryButton"]
[editable path="BottomLeftContainer/ClanButton"]
[editable path="BottomRightContainer/BattleButton"]
[editable path="CenterRightContainer/Col1/RewardsButton"]
[editable path="CenterRightContainer/Col2/QuestsButton"]
[editable path="CenterRightContainer/Col2/FriendsButton"]
[editable path="CenterRightContainer/Col3/EditorButton"]
[editable path="SettingsButton"]
[editable path="TopRightContainer/EnergyBar"]
[editable path="TopRightContainer/EnergyBar/SignalButton"]
[editable path="TopRightContainer/CoinBar"]
[editable path="TopRightContainer/CoinBar/SignalButton"]
[editable path="TopRightContainer/GemBar"]
[editable path="TopRightContainer/GemBar/SignalButton"]
